# quantum-research-agent-public

./: .env.example  .gitignore  LICENSE_NOTICE.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: validate.yml
docs/: architecture.md  claim_language.md  demo_mode.md  evaluation.md  evidence_policy.md  limitations.md  privacy_and_sanitization.md  roadmap_public.md  why_qra_is_different.md
examples/: README.md  agent_output_sample.md  knowledge_state_sample.md  sample_public_papers.json
examples/runs/2026-06-01-sample/: daily_report.md  idea_candidates.md  paper_triage.md  provenance.json  run_manifest.json  validation_report.json
schemas/: analysis_report.schema.json  paper_record.schema.json  provenance.schema.json  run_manifest.schema.json
scripts/: generate_demo_run.py  validate_public_repo.py
showcase/: README.md  hypothesis_case_study.md  memory_compounding_example.md  operations_summary.md
showcase/deep_research_outputs/real_vs_complex_qm_2026-06-sanitized/: deep_research_note.md  provenance.json  review_status.json
showcase/sanitized_runs/2026-06-10/: daily_report.md  run_manifest.json  stage_summary.json  validation_report.json
src/qra_public_demo/: __init__.py  demo_pipeline.py  schema_validation.py  secret_scan.py
tests/: test_schema_validation.py  test_secret_scan.py
