[project]
name = "qra-public-demo"
version = "0.1.0"
description = "Public demo and documentation for a private autonomous quantum foundations research assistant."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
